--- a/odm-spring/build.gradle
+++ b/odm-spring/build.gradle
@@ -41,3 +41,16 @@ dependencies {
     compile 'org.reflections:reflections:0.9.10'
     compile 'org.slf4j:slf4j-api:1.7.13'
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
