--- a/od-springboot-app/webapp/settings.gradle
+++ b/od-springboot-app/webapp/settings.gradle
@@ -2,8 +2,8 @@ rootProject.name = 'od_springboot_demo'
 
 includeFrom 'shared', '../shared'
 includeFrom 'server', '../server'
-includeFrom 'od-spring-boot', '../../od-spring-boot'
-includeFrom 'od-springboot-javaee', '../../od-springboot-javaee'
+//includeFrom 'odm-spring', '../../odm-spring'
+//includeFrom 'odm-web', '../../odm-web'
 
 def includeFrom(String name, String path, String buildFilename = null) {
 	include ":${name}"
