--- a/od-springboot-app/webapp/build.gradle
+++ b/od-springboot-app/webapp/build.gradle
@@ -5,7 +5,7 @@ apply plugin: "application"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-group = 'sven'
+group = 'com.mycompany'
 version = '0.0.1'
 
 buildscript {
@@ -13,15 +13,16 @@ buildscript {
         springBootVersion = '1.3.0.RELEASE'
     }
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 repositories {
+    mavenLocal()
     maven { url 'http://dl.bintray.com/opendolphin/mavenrepo' }
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
